--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -69,7 +69,7 @@ p {
 
 body {
   font: 100% Georgia, "Times New Roman", Times, serif;
-  background: #3C6B92;
+  background: red;
 }
 
 /* ^2 ------ global classes -------- */
