Update background color

--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -69,7 +69,7 @@ p {
 
 body {
   font: 100% Georgia, "Times New Roman", Times, serif;
-  background: red;
+  background: yellow;
 }
 
 /* ^2 ------ global classes -------- */
